@@ -1,4 +1,12 @@
 2003-03-27  Theodore A. Roth  <troth@openavr.org>
+[Contributed by James Harris <James.Harris@codan.com.au>]
+
+	* src/jtag.h: Lengthen JTAG_RESPONSE_TIMEOUT so slower systems have
+	a fair chance to respond.
+	* src/remote.cc: Passing an int to read(2) is not bigendian friendly,
+	so pass an unsigned char instead.
+
+2003-03-27  Theodore A. Roth  <troth@openavr.org>
 
 	* src/remote.cc: Add handling of 'C' packet. Using 'sig SIGHUP' command
 	from gdb will cause avarice to reset the user program.
